tests/NormalTests/paczka1/fuzzy1/61253179.err
Error in line 10: mkO3xbJRvWJ A397 26,5
Error in line 13: mkO3xbJRvWJ A769 53,2
Error in line 15: mkO3xbJRvWJ S809 81,3
Error in line 22: mkO3xbJRvWJ A397 34,5
